Grok changes
************

3.2 (unreleased)
================

- Fix DeprecationWarnings.


3.1 (2018-05-09)
================

- Expose ``grok.ignore`` to allow not grokking something in a module.

3.0.1 (2018-01-17)
==================

- Replace the use of ``grok.implements()`` with the ``@grok.implementer()``
  directive throughout.

3.0.0 (2018-01-16)
==================

- Python 3 compatibility.

1.15 (2017-05-30)
=================

- Advertise the LazyAnnotation and LazyAnnotationProperty.

1.14.1 (2016-02-15)
===================

- Update tests.

1.14 (2015-06-11)
=================

Note: There are a couple of changes that breaks backward compatibility
with older versions.

- Advertise the ``install_on`` directive from grokcore.site.

- Replace ``ApplicationInitializedEvent`` with
  ``ApplicationAddedEvent`` from grokcore.site.

- Introduce a new event ``DatabaseCreatedEvent`` which is triggered
  only one time when the database is created. For existing application
  upgrade to this new version, an event will still be send at the time
  of the upgrade.

- Replace ``grok.util.create_application`` with the one from
  grokcore.site.util. It is now importable directly from grok.

1.13 (2015-06-04)
=================

- Advertise the ``ObjectEditedEvent`` from grokcore.content.

1.12 (2014-10-20)
=================

- Add ``grok.queryAnnotation()`` and ``grok.deleteAnnotation()`` from
  ``grokcore.annotation``.

1.11.3 (2013-04-03)
===================

- Fixed application_url() calls to use keyword arguments where the API
  defines keyword arguments.

1.11.2 (2013-04-03)
===================

- Fix brown paper bag release where not all resources were included. Again.

1.11.1 (2013-04-03)
===================

- Fix brown paper bag release where not all resources were included.

1.11 (2013-04-03)
=================

- Update ``grok.util.application_url()`` to work correctly with
  ``grokcore.view.util.url()``.

1.10.3 (2012-05-10)
===================
