@@ -1,28 +1,24 @@
-syntax:glob
-
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
+*.egg-info/
+*.profraw
+*.pyc
+*.pyo
+.coverage
 .coverage.*
 .installed.cfg
 .mr.developer.cfg
-.tox
-*.bak
-*.pyc
-*.pyo
-*.swo
-*.swp
-bin
-coverage
-dev
-develop-eggs
-develop/*
-dist
+.tox/
+__pycache__/
+bin/
+build/
+coverage.xml
+develop-eggs/
+dist/
 docs/_build
-docs/doctrees
-docs/html
-docs/latex
-docs/make.bat
-docs/Makefile
-eggs
-grokwiki/src/grokwiki.egg-info/
-parts
-src/*.egg-info
-var/
+eggs/
+htmlcov/
+lib/
+lib64
+parts/
+pyvenv.cfg
