@@ -1,19 +1,34 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
 language: python
 python:
-    - 2.7
-    - 3.4
-    - 3.5
-    - 3.6
-    - pypy
-    - pypy3
+  - 2.7
+  - pypy
+  - 3.5
+  - 3.6
+  - 3.7
+  - 3.8
+  - pypy3
+
+matrix:
+  include:
+    - name: "lint"
+      python: 3.7
+      env: TOXENV="lint"
+    - name: "coverage"
+      python: 3.7
+      env: TOXENV="coverage"
+      after_success:
+        - coveralls
+
 install:
-    - pip install -U pip setuptools
-    - pip install -U zope.testrunner coverage coveralls
-    - pip install -U -e .[test]
+  - pip install -U pip
+  - pip install -U tox-travis coveralls
+
 script:
-    - coverage run -m zope.testrunner --test-path=src
-after_success:
-    - coveralls
+  - tox
+
 notifications:
-    email: false
+  email: false
+
 cache: pip
