@@ -1,7 +1,21 @@
-global-include *.mo
-include *.txt
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
 include *.rst
-include bootstrap.py
+include *.txt
 include buildout.cfg
-include .travis.yml
-recursive-include src *.cpt *.pt *.py *.zcml
+include tox.ini
+
+exclude MANIFEST.in
+
+recursive-include docs *.bat
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs Makefile
+
+recursive-include src *.gif
+recursive-include src *.pt
+recursive-include src *.py
+recursive-include src *.rst
+recursive-include src *.txt
+recursive-include src *.xml
+recursive-include src *.zcml
