@@ -1,0 +1,13 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
+[bdist_wheel]
+universal = 1
+
+[flake8]
+doctests = 1
+
+[check-manifest]
+ignore =
+    .editorconfig
+    .meta.cfg
+    .travis.yml
