@@ -1,42 +1,62 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [tox]
 envlist =
-    coverage-clean,
+    lint,
     py27,
-    py34,
+    pypy,
     py35,
     py36,
-    pypy,
+    py37,
+    py38,
     pypy3,
-    coverage-report
+    coverage
 
 [testenv]
-commands =
-    coverage run --source=grokcore.view -m zope.testrunner --test-path=src {posargs:-vc}
-setenv =
-  COVERAGE_FILE=.coverage.{envname}
+usedevelop = true
 deps =
-    .[test]
     zope.testrunner
-    coverage
-
-[testenv:coverage-clean]
-deps = coverage
-setenv =
-  COVERAGE_FILE=.coverage
-skip_install = true
-commands = coverage erase
-
-[testenv:coverage-report]
-deps = coverage
-setenv =
-  COVERAGE_FILE=.coverage
-skip_install = true
 commands =
-    coverage combine
-    coverage report
-    coverage html
-    coverage
+    zope-testrunner --test-path=src []
+extras = test
 
-[testenv:pypy3]
-setenv=
-  PURE_PYTHON=true
+[testenv:lint]
+basepython = python3
+skip_install = true
+deps =
+    flake8
+    check-manifest
+    check-python-versions
+commands =
+    flake8 src setup.py
+    check-manifest
+    check-python-versions
+
+[testenv:coverage]
+basepython = python3
+deps =
+    coverage
+    coverage-python-version
+    zope.testrunner
+commands =
+    coverage run -m zope.testrunner --test-path=src []
+    coverage html
+    coverage report -m --fail-under=0
+
+[coverage:run]
+branch = True
+plugins = coverage_python_version
+source = src
+
+[coverage:report]
+precision = 2
+exclude_lines =
+    pragma: nocover
+    except ImportError:
+    raise NotImplementedError
+    if __name__ == '__main__':
+    self.fail
+    raise AssertionError
+
+[coverage:html]
+directory = htmlcov
